Removing unnecessary files

--- a/TodoApp/Pages/Todo.razor
+++ b/TodoApp/Pages/Todo.razor
@@ -18,6 +18,14 @@
     </div>
 </div>
 <div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <h5>Tarefa:</h5>
+        </div>
+        <div class="col-md-6">
+            <h5>Adicionada em:</h5>
+        </div>
+    </div>
     <ul class="list-group input-group mb-3">
         @foreach (var todo in todos)
         {
