--- a/TodoApp/Shared/MainLayout.razor
+++ b/TodoApp/Shared/MainLayout.razor
@@ -9,7 +9,7 @@
     </div>
 
     <div class="content px-4">
-        <BlazoredToasts SuccessIconClass="oi oi-check" />
+        <BlazoredToasts SuccessIconClass="oi oi-check" ErrorIconClass="oi oi-trash" />
         @Body
     </div>
 </div>
