--- a/TodoApp/Pages/_Host.cshtml
+++ b/TodoApp/Pages/_Host.cshtml
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="_content/Blazored.Toast/blazored-toast.css" rel="stylesheet" />
-    <link href="~/css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
+    <link href="css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
     <app>
